--- a/settings.json
+++ b/settings.json
@@ -3,64 +3,8 @@
     "sparql": true,
     "graphql": true
   },
-  "datasources": [
-    {
-      "name": "DBpedia 2016-04",
-      "url": "http://fragments.dbpedia.org/2016-04/en"
-    },
-    {
-      "name": "Ruben Verborgh's Profile",
-      "url": "https://ruben.verborgh.org/profile/"
-    },
-    {
-      "name": "Ruben Taelman's Profile",
-      "url": "https://www.rubensworks.net/"
-    },
-    {
-      "name": "DBpedia SPARQL",
-      "url": "https://dbpedia.org/sparql"
-    },
-    {
-      "name": "DBpedia 2015-10",
-      "url": "http://fragments.dbpedia.org/2015-10/en"
-    },
-    {
-      "name": "DBpedia 2015-04",
-      "url": "http://fragments.dbpedia.org/2015/en"
-    },
-    {
-      "name": "DBpedia 2014",
-      "url": "http://fragments.dbpedia.org/2014/en"
-    },
-    {
-      "name": "Ghent University Academic Bibliography",
-      "url": "http://data.linkeddatafragments.org/ugent-biblio"
-    },
-    {
-      "name": "Linked Open Vocabularies",
-      "url": "http://data.linkeddatafragments.org/lov"
-    },
-    {
-      "name": "Virtual International Authority File (VIAF)",
-      "url": "http://data.linkeddatafragments.org/viaf"
-    },
-    {
-      "name": "Harvard Library",
-      "url": "http://data.linkeddatafragments.org/harvard"
-    },
-    {
-      "name": "Between Our Worlds 2018-06",
-      "url": "https://data.betweenourworlds.org/2018-06"
-    },
-    {
-      "name": "Wikidata",
-      "url": "https://query.wikidata.org/bigdata/ldf"
-    },
-    {
-      "name": "SNCB",
-      "url": "https://graph.irail.be/sncb/connections"
-    }
-  ],
+  "datasources": [],
+  
   "prefixes": {
     "rdf":         "http://www.w3.org/1999/02/22-rdf-syntax-ns#",
     "rdfs":        "http://www.w3.org/2000/01/rdf-schema#",
